# $Id$

2005-10-07
	* fixed mldonkey bug? sf.net bug 1316531

2005-09-30
	* Linkstatus patch from btlee on f.g.o (see
	http://forums.gentoo.org/viewtopic-p-2765647.html#2765647)

2005-09-29
	* Fixed build on FreeBSD for non-i386
	* Made it so top_mem doesn't show all the forks of one process

2005-09-27
	* Fixed small bug in config parsing (thanks robgrady, bug 1306032)

2005-09-24
	* Fixed bug where graphs/bars don't show when maximum_width is enabled

2005-09-15
	* Fixed right-alignment bug thanks to Pascal Eberhard
	* Applied patch 1291420 from sf.net
	* Fixed issue with whack graph data
	* Fixed issue with Conky quitting when a file fails to load

2005-09-11
	* Fixed bug with xft and double buffer in own window
	* 1.3.1 released

2005-09-04
	* Misc small bug fixes

2005-09-03
	* MPD patch (sf.net patch 1281108)
	* Fixed graph width bug

2005-08-31
	* FreeBSD support was added
	* 1.3.0 released

2005-08-27
	* added threaded execi, $texeci
	* feature freeze

2005-08-26
	* Fixed slight vertical misalignment of bars/graphs (sf.net 1273994)
	* Diskio fixes (sf.net 1274140)
	* $alignr and $alignc now have 25% more goodness! (sf.net bug 1273905)
	* Far better SMP support
	* Added support for i8k kernel driver, parsing information for dell inspiron laptops found in /proc/i8k (sf.net request 1256058)

2005-08-25
	* More own_window fixes
	* applied disk io patch (sf.net patch 1271691)
	* applied $freq fixes patch, adds new $freq_dyn (sf.net patch 1271633)
	* removed units from $freq* output
	* fix for graph config parsing
	* Added $head, fixed mem leak with $tail

2005-08-24
	* More configure and makefile updates
	* Added scale arg for net graphs
	* Fixed bug in own_window stuff--amazing fake transparency now works
	properly
	* added own_window_colour, own_window_transparent

2005-08-23
	* Added maximum_width

2005-08-22
	* Added $execibar and $execigraph

2005-08-21
	* Moved source into src/, moved docs into doc/
	* Updated makefiles

2005-08-20